@@ -1754,6 +1754,11 @@ Tue Feb 24 16:48:57 CET 2004
 Mon Mar  1 08:56:37 CET 2004
 	
 	- Added partly missing VOLATILE keyword.
+	
+Thu Mar  4 08:29:02 CET 2004
+
+	- Fixed segfault due to missing check for variable declaration.
+	- Added check for multidimensional array usage.
 	- Set pgtypeslib version to 1.2.
 	- Set ecpg version to 3.2.0.
 
